--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "highcharts-angular": "^2.4.0",
     "jquery": "^3.4.1",
     "moment": "^2.24.0",
+    "ng-circle-progress": "^1.5.1",
+    "progressbar.js": "^1.1.0",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
