--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "angular-in-memory-web-api": "^0.9.0",
     "bootstrap": "^4.4.1",
     "chart.js": "^2.9.3",
+    "chartjs-plugin-labels": "^1.1.0",
     "hammerjs": "^2.0.8",
     "highcharts": "^8.1.0",
     "highcharts-angular": "^2.4.0",
